force-app/main/default/objects/Proposal_Site__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Materials</fullName>
            </value>
            <value>
                <fullName>Basic Materials</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>College/University</fullName>
            </value>
            <value>
                <fullName>Commercial Office</fullName>
            </value>
            <value>
                <fullName>Commercial Retail</fullName>
            </value>
            <value>
                <fullName>Food/Beverage</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>K-12 School</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Mining/Extraction</fullName>
            </value>
            <value>
                <fullName>Not For Profit</fullName>
            </value>
            <value>
                <fullName>Pulp and Paper Products</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Multifamily</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Food Sales</fullName>
            </value>
            <value>
                <fullName>Food Service</fullName>
            </value>
            <value>
                <fullName>Health Care (Inpatient)</fullName>
            </value>
            <value>
                <fullName>Health Care (Outpatient)</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
            <value>
                <fullName>Mercantile</fullName>
            </value>
            <value>
                <fullName>Multiuse</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Public Assembly</fullName>
            </value>
            <value>
                <fullName>Public Order and Safety</fullName>
            </value>
            <value>
                <fullName>Religious Worship Service</fullName>
            </value>
            <value>
                <fullName>Warehouse and Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>