force-app/main/default/objects/Proposal_Site__c/fields/Data_Collection_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Data_Collection_Frequency__c</fullName>
    <description>SF-30463</description>
    <label>Data Collection Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>