force-app/main/default/objects/Proposal_Site__c/fields/Date_of_Design__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Design__c</fullName>
    <description>Date pf Design field created for SF-30463</description>
    <label>Date of Design</label>
    <type>Date</type>
</CustomField>