force-app/main/default/objects/Proposal_Site__c/fields/Describe_Site_Use_Type__c.field-meta.xml
<CustomField>
    <fullName>Describe_Site_Use_Type__c</fullName>
    <label>Describe Site Use Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>