force-app/main/default/objects/Proposal_Site__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Innovation - Clean Transportation</description>
    <inlineHelpText>Sites with no specific address can be described here.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>