force-app/main/default/objects/Proposal_Site__c/fields/Designed_Building_Energy_Performance_EUI__c.field-meta.xml
<CustomField>
    <fullName>Designed_Building_Energy_Performance_EUI__c</fullName>
    <description>Changed Name from Designed Energy Use Intensity (EUI) for ticket SF-30463</description>
    <label>Designed Building Energy Performance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>