force-app/main/default/objects/Proposal_Site__c/fields/Does_the_applicant_own_this_site__c.field-meta.xml
<CustomField>
    <fullName>Does_the_applicant_own_this_site__c</fullName>
    <label>Does the applicant own this site?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>