force-app/main/default/objects/Proposal_Site__c/fields/Dwelling_Type__c.field-meta.xml
<CustomField>
    <fullName>Dwelling_Type__c</fullName>
    <description>Select the customer&apos;s home type</description>
    <inlineHelpText>Which of the following best describes the home?</inlineHelpText>
    <label>Dwelling Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single-family detached house</fullName>
            </value>
            <value>
                <fullName>Single-family attached house such as a duplex, townhouse or rowhouse</fullName>
            </value>
            <value>
                <fullName>Apartment building or condominium with 2 to 4 units</fullName>
            </value>
            <value>
                <fullName>Apartment building or condominium with 5 or more units</fullName>
            </value>
            <value>
                <fullName>Mobile home</fullName>
            </value>
            <value>
                <fullName>Single-Family (1-4 units)</fullName>
            </value>
            <value>
                <fullName>Multi-Family (5+ units)</fullName>
            </value>
            <value>
                <fullName>Manufactured/Mobile Home</fullName>
            </value>
            <value>
                <fullName>Group Home/Shelter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>