force-app/main/default/objects/Proposal_Site__c/fields/Economic_Justice_Region__c.field-meta.xml
<CustomField>
    <fullName>Economic_Justice_Region__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the address(Project Site address) falls within an Disadvantaged Community</description>
    <label>Disadvantaged Community</label>
    <type>Checkbox</type>
</CustomField>