force-app/main/default/objects/Proposal_Site__c/fields/Electric_bill_in_applicant_name__c.field-meta.xml
<CustomField>
    <fullName>Electric_bill_in_applicant_name__c</fullName>
    <label>Electric bill in applicant name?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>