force-app/main/default/objects/Proposal_Site__c/fields/Electric_Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Electric_Funding_Source__c</fullName>
    <label>Electric Funding Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>