force-app/main/default/objects/Proposal_Site__c/fields/Electric_Metering_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Electric_Metering_Configuration__c</fullName>
    <description>Please select the type of metering for the project.</description>
    <label>Electric Metering Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Metered</fullName>
            </value>
            <value>
                <fullName>Master Metered</fullName>
            </value>
            <value>
                <fullName>Sub-Metered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>