force-app/main/default/objects/Proposal_Site__c/fields/Electric_Utility_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Electric_Utility_Account_Number__c</fullName>
    <label>Electric Utility Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>