force-app/main/default/objects/Proposal_Site__c/fields/Electric_Utility_POD_Number__c.field-meta.xml
<CustomField>
    <fullName>Electric_Utility_POD_Number__c</fullName>
    <label>Electric Utility POD Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>