force-app/main/default/objects/Proposal_Site__c/fields/Energy_Storage__c.field-meta.xml
<CustomField>
    <fullName>Energy_Storage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This site has Energy Storage</description>
    <inlineHelpText>This site has Energy Storage</inlineHelpText>
    <label>Energy Storage</label>
    <type>Checkbox</type>
</CustomField>