force-app/main/default/objects/Proposal_Site__c/fields/Energy_Storage_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Energy_Storage_Capacity__c</fullName>
    <description>Energy Storage Capacity (MW)</description>
    <inlineHelpText>Energy Storage Capacity (MW)</inlineHelpText>
    <label>Storage Capacity (MWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>