force-app/main/default/objects/Proposal_Site__c/fields/Energy_Storage_Description__c.field-meta.xml
<CustomField>
    <fullName>Energy_Storage_Description__c</fullName>
    <description>Describe Energy Storage System and Equipment</description>
    <inlineHelpText>Describe Energy Storage System and Equipment</inlineHelpText>
    <label>Energy Storage Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>