force-app/main/default/objects/Proposal_Site__c/fields/Energy_Storage_MWh__c.field-meta.xml
<CustomField>
    <fullName>Energy_Storage_MWh__c</fullName>
    <label>Energy Storage (MW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>