force-app/main/default/objects/Proposal_Site__c/fields/Energy_Storage_NYISO_Zone__c.field-meta.xml
<CustomField>
    <fullName>Energy_Storage_NYISO_Zone__c</fullName>
    <description>For LSR</description>
    <label>Energy Storage NYISO Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A – West</fullName>
            </value>
            <value>
                <fullName>B – Genessee</fullName>
            </value>
            <value>
                <fullName>C – Central</fullName>
            </value>
            <value>
                <fullName>D – North</fullName>
            </value>
            <value>
                <fullName>E - Mohawk Valley</fullName>
            </value>
            <value>
                <fullName>F – Capital</fullName>
            </value>
            <value>
                <fullName>G - Hudson Valley</fullName>
            </value>
            <value>
                <fullName>H- Millwood</fullName>
            </value>
            <value>
                <fullName>I- Dunwoodie</fullName>
            </value>
            <value>
                <fullName>J – NYC</fullName>
            </value>
            <value>
                <fullName>K- Long Island</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>