force-app/main/default/objects/Proposal_Site__c/fields/Energy_Storage_Operation_Date__c.field-meta.xml
<CustomField>
    <fullName>Energy_Storage_Operation_Date__c</fullName>
    <description>Energy Storage Actual or Expected Operation Date</description>
    <inlineHelpText>Energy Storage Actual or Expected Operation Date</inlineHelpText>
    <label>Energy Storage Operation Date</label>
    <type>Date</type>
</CustomField>