force-app/main/default/objects/Proposal_Site__c/fields/Enhanced_Incentive_Options__c.field-meta.xml
<CustomField>
    <fullName>Enhanced_Incentive_Options__c</fullName>
    <description>SF-29457</description>
    <inlineHelpText>Applicants need to upload the supporting documentation for the requested incentive enhancements as attachments on Step 7 in the Optional Documents section.</inlineHelpText>
    <label>Enhanced Incentive Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-None-</fullName>
            </value>
            <value>
                <fullName>Design Support for Unique Low-carbon Solutions</fullName>
            </value>
            <value>
                <fullName>Innovative Technologies Support</fullName>
            </value>
            <value>
                <fullName>Mentoring Support</fullName>
            </value>
            <value>
                <fullName>Project Cost-Related Data Sharing</fullName>
            </value>
            <value>
                <fullName>Smart Building Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>