force-app/main/default/objects/Proposal_Site__c/fields/Equipment_Location__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Location__c</fullName>
    <label>Equipment Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behind the Meter</fullName>
            </value>
            <value>
                <fullName>Front of Meter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>