force-app/main/default/objects/Proposal_Site__c/fields/Equipment_Using_Natural_Gas__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Using_Natural_Gas__c</fullName>
    <description>Please select all equipment that will use gas.</description>
    <label>Equipment Using Natural Gas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cooking</fullName>
            </value>
            <value>
                <fullName>DHW Heating</fullName>
            </value>
            <value>
                <fullName>Laundry</fullName>
            </value>
            <value>
                <fullName>Space Heating</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>