force-app/main/default/objects/Proposal_Site__c/fields/Estimated_Annual_Bid_Quantity_MWh__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Bid_Quantity_MWh__c</fullName>
    <description>Estimated Annual Bid Quantity (MWh)</description>
    <inlineHelpText>Estimated Annual Bid Quantity (MWh)</inlineHelpText>
    <label>Estimated Annual Bid Quantity (MWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>