force-app/main/default/objects/Proposal_Site__c/fields/Estimated_NYSERDA_Incentives_for_Service__c.field-meta.xml
<CustomField>
    <fullName>Estimated_NYSERDA_Incentives_for_Service__c</fullName>
    <label>Estimated NYSERDA Incentives for Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>