force-app/main/default/objects/Proposal_Site__c/fields/Estimated_NYSERDA_Incentives_for_Sys__c.field-meta.xml
<CustomField>
    <fullName>Estimated_NYSERDA_Incentives_for_Sys__c</fullName>
    <label>Estimated NYSERDA Incentives for System</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>