force-app/main/default/objects/Proposal_Site__c/fields/EVSE_Will_Be_Paying_Or_Free_To_Use__c.field-meta.xml
<CustomField>
    <fullName>EVSE_Will_Be_Paying_Or_Free_To_Use__c</fullName>
    <inlineHelpText>Will drivers need to pay to use charging station?</inlineHelpText>
    <label>EVSE Will Be Paying Or Free To Use?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pay</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>