force-app/main/default/objects/Proposal_Site__c/fields/Expected_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Installation_Date__c</fullName>
    <label>Expected Installation Date</label>
    <type>Date</type>
</CustomField>