force-app/main/default/objects/Proposal_Site__c/fields/Expected_Service_Contract_Completion_Dat__c.field-meta.xml
<CustomField>
    <fullName>Expected_Service_Contract_Completion_Dat__c</fullName>
    <label>Expected Service Contract Completion Dat</label>
    <type>Date</type>
</CustomField>