force-app/main/default/objects/Proposal_Site__c/fields/Facility_Description__c.field-meta.xml
<CustomField>
    <fullName>Facility_Description__c</fullName>
    <description>General Description of the Facility on the Site(used by RES). Changed label from Facility Description to General Description of Bid Facility.</description>
    <inlineHelpText>General Description of the Facility on the Site</inlineHelpText>
    <label>General Description of Bid Facility</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>