force-app/main/default/objects/Proposal_Site__c/fields/First_Year_of_Data__c.field-meta.xml
<CustomField>
    <fullName>First_Year_of_Data__c</fullName>
    <label>First Year of Data</label>
    <type>Date</type>
</CustomField>