force-app/main/default/objects/Proposal_Site__c/fields/Fuel_Replaced__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Replaced__c</fullName>
    <label>Fuel Replaced</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>#2 Oil</fullName>
            </value>
            <value>
                <fullName>#4 Oil</fullName>
            </value>
            <value>
                <fullName>#6 Oil</fullName>
            </value>
            <value>
                <fullName>Steam</fullName>
            </value>
            <value>
                <fullName>Natural Gas</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>