force-app/main/default/objects/Proposal_Site__c/fields/Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type__c</fullName>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Natural Gas</fullName>
            </value>
            <value>
                <fullName>Non-Utility Generated Steam (on site)</fullName>
            </value>
            <value>
                <fullName>Non-Utility Generated Steam (off site)</fullName>
            </value>
            <value>
                <fullName>Oil</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
            <value>
                <fullName>Steam</fullName>
            </value>
            <value>
                <fullName>Utility Generated Steam</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>