force-app/main/default/objects/Proposal_Site__c/fields/Gas_Utility_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Gas_Utility_Account_Number__c</fullName>
    <label>Gas Utility Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>