force-app/main/default/objects/Proposal_Site__c/fields/Gas_Utility_Company__c.field-meta.xml
<CustomField>
    <fullName>Gas_Utility_Company__c</fullName>
    <label>Gas Utility Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gas_Utility_Company</valueSetName>
    </valueSet>
</CustomField>