force-app/main/default/objects/Proposal_Site__c/fields/General_Description__c.field-meta.xml
<CustomField>
    <fullName>General_Description__c</fullName>
    <description>This is the General Description of the Bid Facility. Used by LSR.</description>
    <inlineHelpText>This is the General Description of the Bid Facility.</inlineHelpText>
    <label>General Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>