force-app/main/default/objects/Proposal_Site__c/fields/Generating_Equipment_Description__c.field-meta.xml
<CustomField>
    <fullName>Generating_Equipment_Description__c</fullName>
    <description>Summary of Generating Equipment</description>
    <inlineHelpText>Summary of Generating Equipment (e.g. the manufacturer and number of units of major equipment)</inlineHelpText>
    <label>Generating Equipment Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>