force-app/main/default/objects/Proposal_Site__c/fields/Geo_Match_Address__c.field-meta.xml
<CustomField>
    <fullName>Geo_Match_Address__c</fullName>
    <label>Geo Match Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>