force-app/main/default/objects/Proposal_Site__c/fields/Grid_System_Operator__c.field-meta.xml
<CustomField>
    <fullName>Grid_System_Operator__c</fullName>
    <description>The grid operator where the facility is located.</description>
    <inlineHelpText>The grid operator where the facility is located.</inlineHelpText>
    <label>Grid System Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NYISO</fullName>
            </value>
            <value>
                <fullName>PJM</fullName>
            </value>
            <value>
                <fullName>ONT</fullName>
            </value>
            <value>
                <fullName>HQ</fullName>
            </value>
            <value>
                <fullName>NEISO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>