force-app/main/default/objects/Proposal_Site__c/fields/Gross_Site_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Gross_Site_Square_Footage__c</fullName>
    <label>Gross Site Square Footage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>