force-app/main/default/objects/Proposal_Site__c/fields/Heating_Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Heating_Funding_Source__c</fullName>
    <label>Heating Funding Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>