force-app/main/default/objects/Proposal_Site__c/fields/Historic_Preservation__c.field-meta.xml
<CustomField>
    <fullName>Historic_Preservation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Historic Preservation is the rehabilitation and use of buildings and structures that have been designated as a historic landmark by either the New York State Historic Preservation Office (SHPO) or another local preservation office.</description>
    <inlineHelpText>Historic Preservation is the rehabilitation and use of buildings and structures that have been designated as a historic landmark by either the New York State Historic Preservation Office (SHPO) or another local preservation office.</inlineHelpText>
    <label>Historic preservation site?</label>
    <type>Checkbox</type>
</CustomField>