force-app/main/default/objects/Proposal_Site__c/fields/Home_s_conditioned_area_square_feet__c.field-meta.xml
<CustomField>
    <fullName>Home_s_conditioned_area_square_feet__c</fullName>
    <description>Enter the total square footage of the customer&apos;s home</description>
    <inlineHelpText>Not counting an unfinished basement, about how large is the home in square feet?</inlineHelpText>
    <label>Home&apos;s conditioned area (square feet)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 1,000 square feet</fullName>
            </value>
            <value>
                <fullName>1,000 to less than 1,500 square feet</fullName>
            </value>
            <value>
                <fullName>1,500 to less than 2,000 square feet</fullName>
            </value>
            <value>
                <fullName>2,000 to less than 2,500 square feet</fullName>
            </value>
            <value>
                <fullName>2,500 to less than 3,000 square feet</fullName>
            </value>
            <value>
                <fullName>3,000 to less than 4,000 square feet</fullName>
            </value>
            <value>
                <fullName>4,000 or more square feet</fullName>
            </value>
            <value>
                <fullName>Don’t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>