force-app/main/default/objects/Proposal_Site__c/fields/Home_s_Primary_Cooling_System__c.field-meta.xml
<CustomField>
    <fullName>Home_s_Primary_Cooling_System__c</fullName>
    <description>Select the customer&apos;s primary cooling system</description>
    <label>Home&apos;s Primary Cooling System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air-Source Heat Pump</fullName>
            </value>
            <value>
                <fullName>Central air</fullName>
            </value>
            <value>
                <fullName>Window air conditioner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>