force-app/main/default/objects/Proposal_Site__c/fields/Home_s_primary_system_fuel_type__c.field-meta.xml
<CustomField>
    <fullName>Home_s_primary_system_fuel_type__c</fullName>
    <description>Select the customer&apos;s primary fuel type</description>
    <label>Home&apos;s primary system fuel type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Natural Gas</fullName>
            </value>
            <value>
                <fullName>Non-Utility Generated Steam (off site)</fullName>
            </value>
            <value>
                <fullName>Non-Utility Generated Steam (on site)</fullName>
            </value>
            <value>
                <fullName>Oil</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Utility Generated Steam</fullName>
            </value>
            <value>
                <fullName>Wood/Wood Pellets</fullName>
            </value>
            <value>
                <fullName>Kerosene</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
            <value>
                <fullName>Wood Pellets</fullName>
            </value>
            <value>
                <fullName>I don&apos;t know</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>