force-app/main/default/objects/Proposal_Site__c/fields/Impacted_Site_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Site_Square_Footage__c</fullName>
    <inlineHelpText>Enter Project Specific Square Footage.
Estimate If Unknown.</inlineHelpText>
    <label>Impacted Site Square Footage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>