force-app/main/default/objects/Proposal_Site__c/fields/Incentive_Level__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Level__c</fullName>
    <label>Incentive Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Option A</fullName>
            </value>
            <value>
                <fullName>Option B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>