force-app/main/default/objects/Proposal_Site__c/fields/Incentive_Region__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Region__c</fullName>
    <description>S-00483: CHP Incentive Application: Project Site related</description>
    <label>Incentive Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>County__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Upstate</fullName>
                <default>true</default>
                <label>Upstate</label>
            </value>
            <value>
                <fullName>Down State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>