force-app/main/default/objects/Proposal_Site__c/fields/Interconnection_Description__c.field-meta.xml
<CustomField>
    <fullName>Interconnection_Description__c</fullName>
    <description>Description of the point of interconnection, including the planned substation and any planned gen-ties.</description>
    <inlineHelpText>Description of the point of interconnection, including the planned substation and any planned gen-ties.</inlineHelpText>
    <label>Interconnection Description</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>