force-app/main/default/objects/Proposal_Site__c/fields/Interconnection_Queue_Number__c.field-meta.xml
<CustomField>
    <fullName>Interconnection_Queue_Number__c</fullName>
    <description>Interconnection Queue Number</description>
    <inlineHelpText>Interconnection Queue Number</inlineHelpText>
    <label>Interconnection Queue Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>