force-app/main/default/objects/Proposal_Site__c/fields/Is_aiming_for_LEED_Certification__c.field-meta.xml
<CustomField>
    <fullName>Is_aiming_for_LEED_Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is aiming for LEED Certification</label>
    <type>Checkbox</type>
</CustomField>